--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,20 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0.36
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: test_database
+
     strategy:
       matrix:
         php: [8.2.12]  # PHPバージョンを8.2.12に設定
@@ -29,6 +43,30 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-interaction --no-progress
 
+      - name: Copy .env.example to .env
+        run: cp .env.example .env
+
+      - name: Set environment variables
+        run: |
+          echo "DB_CONNECTION=mysql" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=test_database" >> .env
+          echo "DB_USERNAME=root" >> .env
+          echo "DB_PASSWORD=root" >> .env
+
+      - name: Generate Application Key
+        run: php artisan key:generate
+
+      - name: Wait for MySQL to be ready
+        run: |
+          sudo apt-get install -y netcat
+          while ! nc -z 127.0.0.1 3306; do
+            sleep 1
+          done
+
+      - name: Run Database Migrations
+        run: php artisan migrate --force
+
       - name: Run tests
         run: vendor/bin/phpunit
-
