--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [8.2.12]  # PHPバージョンを8.2.12に設定
+        php: [8.2.12]
 
     steps:
       - uses: actions/checkout@v2
@@ -40,8 +40,19 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
 
-      - name: Install dependencies
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
+
+      - name: Install Composer dependencies
         run: composer install --prefer-dist --no-interaction --no-progress
+
+      - name: Install NPM dependencies
+        run: npm install
+
+      - name: Build assets
+        run: npm run build
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
